css/style.css
html, body {
  background-color: ##ECF2F0;
  height: 100%;
  margin: 0;
  padding: 0;
}
/*header for the webpage*/
#header {
  width: 100%;
  background-color: lightblue;
  height: 60px;
}

.col-md-6 div {/*maps divs*/
  height: 275px;
  margin-top: 0;
}
/*map div headers*/
.col-md-6 h3 {
  margin-left: 20px;
  margin-top: 2px;
  padding-top: 0;
}

.col-md-3 {/*sidebar*/
  margin-top: 8px;

}
/*map container*/
.col-md-9 {
  margin-top: 60px;
}

.col-md-10 {/*input/output section of sidebar*/
  height: 680px; 
}

.col-md-2 {
}

.col-md-2 .row img {/*sidebar icons for selecting input/output*/
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 10px;
  height: 50px;
  width: 50px;
}
/*map object styles*/
#map1, #map2, #map3, #map4 {/*maps themselves*/
  border-style: solid;
  border-color: black;
  border-width: 1px;
  background-color: black;
  margin-left: 10px;
  margin-right: 10px;
}

.sidenav h3 {
  padding-left: 10px;
}


/*the submit button styles*/
button {
  margin-left: 60px;
}

/* The side navigation menu */
.sidenav {
    height: 680px; /* 100% Full-height */
    /* margin-top: 68px; 
    margin-right: 55px; */
    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 0;
    right: 0;
    background-color: white;
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
    border-style: solid;
    border-color: black;
    border-width: 0px;
    position: absolute;
}

/* The navigation menu links */
.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover, .offcanvas a:focus{
    color: #f1f1f1;
}

.checkbox {
  margin: 0 30px;
} 

/* Position and style the close button (top right corner) */
.closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px !important;
    margin-left: 50px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
    transition: margin-left .5s;
    padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

